# Logger

./: CMakeLists.txt
doc/: Doxyfile
lib/: CMakeLists.txt
lib/include/ara/core/: error_code.h  error_domain.h  instance_specifier.h  optional.h  result.h
lib/include/ara/log/: argument.h  common.h  log_stream.h  logger.h  logging_framework.h
lib/include/ara/log/sink/: console_log_sink.h  file_log_sink.h  log_sink.h
lib/src/ara/core/: error_code.cpp  instance_specifier.cpp
lib/src/ara/log/: log_stream.cpp  logger.cpp  logging_framework.cpp
lib/src/ara/log/sink/: console_log_sink.cpp  file_log_sink.cpp  log_sink.cpp
test/: CMakeLists.txt
test/unit/: argument_test.cpp  log_stream_test.cpp  logger_test.cpp  logging_framework_test.cpp
